added func to find all points in an occupied cell, starting func to fit gaussian to identified points

--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 138,
    "metadata": {
     "scrolled": false
    },
@@ -67,16 +67,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "took 0.021701574325561523 s to find occupied cells\n",
-      "occupied =  tf.Tensor(\n",
-      "[613 961 612 969 954 605 964 956 960 970 968 976 971 975 967 977 953 948\n",
-      " 957 947 949 950], shape=(22,), dtype=int32)\n"
+      "took 0.015616178512573242 s to find occupied cells\n",
+      "took 0.01561880111694336 s to find pts in cells\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbf7843aea0c4546a4b32321030dee35",
+       "model_id": "adda56feaace4e4aaff3ffc93b6cb0ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,7 +106,7 @@
     "#single distinct cluster\n",
     "c1 = np.random.randn(10000,3)*tf.constant([0.3,0.06,0.3]) + tf.constant([0.,4.,0.])\n",
     "\n",
-    "it = ICET(cloud1 = c1, fid = 50)\n",
+    "it = ICET(cloud1 = c1, fid = 30)\n",
     "ViewInteractiveWidget(it.plt.window)\n"
    ]
   },
