--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 216,
    "metadata": {
     "scrolled": false
    },
@@ -67,14 +67,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "took 0.015616178512573242 s to find occupied cells\n",
-      "took 0.01561880111694336 s to find pts in cells\n"
+      "took 0.1365964412689209 s to find occupied cells\n",
+      "took 0.10580801963806152 s to find pts in cells\n",
+      "took 0.49527454376220703 s to fit gaussians to each cell\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adda56feaace4e4aaff3ffc93b6cb0ed",
+       "model_id": "55803a66965a410e9ff227594d3691d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,9 +105,9 @@
     "# c1 = np.random.randn(2,3)*tf.constant([3.,3.,0.5])\n",
     "\n",
     "#single distinct cluster\n",
-    "c1 = np.random.randn(10000,3)*tf.constant([0.3,0.06,0.3]) + tf.constant([0.,4.,0.])\n",
+    "c1 = np.random.randn(100,3)*tf.constant([0.3,0.06,0.3]) + tf.constant([0.,4.,0.])\n",
     "\n",
-    "it = ICET(cloud1 = c1, fid = 30)\n",
+    "it = ICET(cloud1 = c1, fid = 100)\n",
     "ViewInteractiveWidget(it.plt.window)\n"
    ]
   },
