fixed bug that was incorrectly assigning points to cells

--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "data": {
       "application/javascript": [
@@ -50,31 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 78,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "enough1 tf.Tensor([0 1 2 3 4 5 7 8 9], shape=(9,), dtype=int64)\n",
-      "tf.Tensor([954 961 970 962 968 955 969 963 956], shape=(9,), dtype=int32)\n",
-      "enough2 tf.Tensor([2 3 4 5 7 8], shape=(6,), dtype=int64)\n",
-      "tf.Tensor([970 962 968 955 969 963], shape=(6,), dtype=int32)\n",
-      "corr indices tf.Tensor([2 3 4 5 7 8], shape=(6,), dtype=int64)\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fcbb507ca3164daca97e0aba88bfafc1",
+       "model_id": "db378ab8de03421fb5ac74ab75531b14",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ViewInteractiveWidget(height=749, layout=Layout(height='auto', width='100%'), width=960)"
+       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
       ]
      },
      "metadata": {},
@@ -84,26 +81,24 @@
    "source": [
     "from ICET_spherical import ICET\n",
     "\n",
-    "# ## init KITTI dataset -----------------------------------------------------------------\n",
-    "# basedir = 'C:/kitti/'\n",
-    "# date = '2011_09_26'\n",
-    "# drive = '0005'\n",
-    "# frame_range = range(150, 151, 1)\n",
-    "# dataset = pykitti.raw(basedir, date, drive)\n",
-    "# velo1 = dataset.get_velo(0) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
-    "# c1 = velo1[:,:3]\n",
-    "# c1 = c1[c1[:,2] > -1.5] #ignore ground plane\n",
-    "# ## ------------------------------------------------------------------------------------\n",
-    "\n",
-    "# c1 = np.random.randn(100,3)*tf.constant([3.,3.,1.])\n",
-    "# c1 = np.random.randn(2,3)*tf.constant([3.,3.,0.5])\n",
+    "## init KITTI dataset -----------------------------------------------------------------\n",
+    "basedir = 'C:/kitti/'\n",
+    "date = '2011_09_26'\n",
+    "drive = '0005'\n",
+    "frame_range = range(150, 151, 1)\n",
+    "dataset = pykitti.raw(basedir, date, drive)\n",
+    "velo1 = dataset.get_velo(0) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
+    "c1 = velo1[:,:3]\n",
+    "c1 = c1[c1[:,2] > -1.5] #ignore ground plane\n",
+    "## ------------------------------------------------------------------------------------\n",
     "\n",
     "#single distinct cluster\n",
-    "c1 = np.random.randn(1000,3)*tf.constant([0.3,0.06,0.3]) + tf.constant([0.,4.,0.])\n",
-    "c2 = c1*np.array([1.05, 1.0, 1.0]) - np.array([0.1, 0.3, 0.0])\n",
-    "# c2 = c1*np.array([1.05, 1.0, 1.0]) - np.array([2.1, 0.3, 0.0])\n",
+    "# c1 = np.random.randn(10000,3)*tf.constant([0.3,0.06,0.3]) + tf.constant([0.,4.,0.])\n",
+    "# c1 = np.random.randn(1000,3)*3\n",
     "\n",
-    "it = ICET(cloud1 = c1, cloud2 = c2,  fid = 50)\n",
+    "c2 = c1 - np.array([0.1, 1., 0.0])\n",
+    "\n",
+    "it = ICET(cloud1 = c1, cloud2 = c2,  fid = 30)\n",
     "ViewInteractiveWidget(it.plt.window)\n"
    ]
   },
@@ -154,7 +149,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -168,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
