--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 61,
    "metadata": {
     "scrolled": false
    },
@@ -66,7 +66,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d39d0d44dd74e5ebdaea0ffd140caf8",
+       "model_id": "c6c67ad586924dde882afaeb43ceaaa0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,12 +93,12 @@
     "## ------------------------------------------------------------------------------------\n",
     "\n",
     "#single distinct cluster\n",
-    "# c1 = np.random.randn(10000,3)*tf.constant([0.3,0.06,0.3]) + tf.constant([0.,4.,0.])\n",
+    "c1 = np.random.randn(3000,3)*tf.constant([0.3,0.06,0.3]) + tf.constant([0.,4.,0.])\n",
     "# c1 = np.random.randn(1000,3)*3\n",
     "\n",
     "c2 = c1 - np.array([0.1, 1., 0.0])\n",
     "\n",
-    "it = ICET(cloud1 = c1, cloud2 = c2,  fid = 30)\n",
+    "it = ICET(cloud1 = c1, cloud2 = c2,  fid = 50)\n",
     "ViewInteractiveWidget(it.plt.window)\n"
    ]
   },
@@ -126,24 +126,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'vedo.plotter' has no attribute 'hoverLegends'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_12604/2054440508.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mvedo\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvedo\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplotter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhoverLegends\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'vedo.plotter' has no attribute 'hoverLegends'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[0.]\n",
+      " [1.]\n",
+      " [2.]\n",
+      " [3.]\n",
+      " [4.]\n",
+      " [5.]], shape=(6, 1), dtype=float64)\n",
+      "tf.Tensor(\n",
+      "[[0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [2.]\n",
+      " [2.]\n",
+      " [2.]\n",
+      " [3.]\n",
+      " [3.]\n",
+      " [3.]\n",
+      " [4.]\n",
+      " [4.]\n",
+      " [4.]\n",
+      " [5.]\n",
+      " [5.]\n",
+      " [5.]], shape=(18, 1), dtype=float64)\n",
+      "tf.Tensor(\n",
+      "[[0. 0. 0.]\n",
+      " [1. 1. 1.]\n",
+      " [2. 2. 2.]\n",
+      " [3. 3. 3.]\n",
+      " [4. 4. 4.]\n",
+      " [5. 5. 5.]], shape=(6, 3), dtype=float64)\n"
      ]
     }
    ],
    "source": [
-    "import vedo\n",
-    "print(vedo.plotter.hoverLegends)"
+    "#duplicate each element of an n*1 vector 3 times\n",
+    "t = tf.linspace(0,5,6)[:,None]\n",
+    "print(t)\n",
+    "\n",
+    "test  = tf.tile(t, [3,1])\n",
+    "# print(test)\n",
+    "test2 = tf.reshape(tf.transpose(tf.reshape(test, [3,-1])), [-1,1])\n",
+    "print(test2)\n",
+    "test3 = tf.reshape(tf.transpose(tf.reshape(test, [3,-1])), [-1,3])\n",
+    "print(test3)"
    ]
   }
  ],
