brought over least squares solution code and related functions from 3D-ICET. Starting work on debugging U and L

--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -58,15 +58,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 166,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "estimated solution vector X: \n",
+      " tf.Tensor([0.1 0.3 0.  0.  0.  0. ], shape=(6,), dtype=float32)\n",
+      "stds: \n",
+      " tf.Tensor([0.10662948 0.00106549 0.0255875  0.0044843  0.07631556 0.00601539], shape=(6,), dtype=float32)\n",
+      "estimated solution vector X: \n",
+      " tf.Tensor([ 0.09088177  0.30101523  0.03226731 -0.00501806  0.03149422 -0.00282478], shape=(6,), dtype=float32)\n",
+      "stds: \n",
+      " tf.Tensor([0.10630993 0.00106438 0.02635844 0.00441634 0.07889022 0.00594828], shape=(6,), dtype=float32)\n",
+      "estimated solution vector X: \n",
+      " tf.Tensor([ 0.08381683  0.30096936  0.0422958  -0.00399998  0.06346144 -0.00371498], shape=(6,), dtype=float32)\n",
+      "stds: \n",
+      " tf.Tensor([0.10630614 0.00106955 0.02779579 0.00437668 0.08102326 0.00592286], shape=(6,), dtype=float32)\n",
+      "estimated solution vector X: \n",
+      " tf.Tensor([ 0.07113962  0.3009315   0.04950405 -0.00343051  0.1196395  -0.00376625], shape=(6,), dtype=float32)\n",
+      "stds: \n",
+      " tf.Tensor([0.10515884 0.00107619 0.02715474 0.00432565 0.07737441 0.00594224], shape=(6,), dtype=float32)\n",
+      "estimated solution vector X: \n",
+      " tf.Tensor([ 0.07112513  0.30086517  0.06155644 -0.00327357  0.10061166 -0.00211483], shape=(6,), dtype=float32)\n",
+      "stds: \n",
+      " tf.Tensor([0.11318387 0.0011689  0.06639217 0.00434308 0.12622176 0.00622232], shape=(6,), dtype=float32)\n",
+      "\n",
+      " L2 \n",
+      " tf.Tensor(\n",
+      "[[0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 1.]], shape=(4, 6), dtype=float32)\n",
+      "\n",
+      " lam \n",
+      " tf.Tensor(\n",
+      "[[5.3267868e+01 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      "  0.0000000e+00]\n",
+      " [0.0000000e+00 8.0493385e+01 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      "  0.0000000e+00]\n",
+      " [0.0000000e+00 0.0000000e+00 5.0403653e+02 0.0000000e+00 0.0000000e+00\n",
+      "  0.0000000e+00]\n",
+      " [0.0000000e+00 0.0000000e+00 0.0000000e+00 5.7060297e+04 0.0000000e+00\n",
+      "  0.0000000e+00]\n",
+      " [0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 9.9029352e+04\n",
+      "  0.0000000e+00]\n",
+      " [0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      "  9.0255619e+05]], shape=(6, 6), dtype=float32)\n",
+      "\n",
+      " U2 \n",
+      " tf.Tensor(\n",
+      "[[ 2.8961521e-01  9.5006859e-01 -1.0571338e-01  1.3468671e-02\n",
+      "  -4.6184316e-02  5.4477429e-04]\n",
+      " [-2.7168330e-03  7.4827898e-04 -7.2825598e-03 -1.3448279e-02\n",
+      "   2.2894399e-02  9.9961698e-01]\n",
+      " [ 3.8001809e-01 -1.1841152e-02  9.2430389e-01  1.5646337e-02\n",
+      "   2.8445566e-02  7.3346146e-03]\n",
+      " [ 2.0710609e-03  1.1274398e-02 -3.1927742e-02  8.2814366e-01\n",
+      "   5.5948550e-01 -1.9081077e-03]\n",
+      " [ 8.7845820e-01 -3.0828425e-01 -3.6489162e-01 -1.1315593e-02\n",
+      "  -1.1138193e-03 -1.6678151e-04]\n",
+      " [ 2.9607897e-03  4.5415077e-02 -1.6390894e-02 -5.5985993e-01\n",
+      "   8.2674569e-01 -2.6612615e-02]], shape=(6, 6), dtype=float32)\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6c67ad586924dde882afaeb43ceaaa0",
+       "model_id": "08d5db8e1ecb4931bab12a5bbc1201fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,12 +156,11 @@
     "## ------------------------------------------------------------------------------------\n",
     "\n",
     "#single distinct cluster\n",
-    "c1 = np.random.randn(3000,3)*tf.constant([0.3,0.06,0.3]) + tf.constant([0.,4.,0.])\n",
-    "# c1 = np.random.randn(1000,3)*3\n",
+    "c1 = np.random.randn(3000,3)*tf.constant([0.3,0.04,0.3]) + tf.constant([0.,4.,0.])\n",
+    "c2 = np.random.randn(3000,3)*tf.constant([0.3,0.04,0.3]) + tf.constant([0.,4.,0.]) - np.array([0.1, 0.3, 0.0])\n",
+    "# c2 = c1 - np.array([0.1, 0.3, 0.0])\n",
     "\n",
-    "c2 = c1 - np.array([0.1, 1., 0.0])\n",
-    "\n",
-    "it = ICET(cloud1 = c1, cloud2 = c2,  fid = 50)\n",
+    "it = ICET(cloud1 = c1, cloud2 = c2,  fid = 50, draw = True)\n",
     "ViewInteractiveWidget(it.plt.window)\n"
    ]
   },
