--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 250,
    "metadata": {
     "scrolled": false
    },
@@ -68,77 +68,33 @@
      "output_type": "stream",
      "text": [
       "estimated solution vector X: \n",
-      " tf.Tensor([0.1 0.3 0.  0.  0.  0. ], shape=(6,), dtype=float32)\n",
-      "stds: \n",
-      " tf.Tensor([0.10662948 0.00106549 0.0255875  0.0044843  0.07631556 0.00601539], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([0.3 0.  0.  0.  0.  0. ], shape=(6,), dtype=float32)\n",
       "estimated solution vector X: \n",
-      " tf.Tensor([ 0.09088177  0.30101523  0.03226731 -0.00501806  0.03149422 -0.00282478], shape=(6,), dtype=float32)\n",
-      "stds: \n",
-      " tf.Tensor([0.10630993 0.00106438 0.02635844 0.00441634 0.07889022 0.00594828], shape=(6,), dtype=float32)\n",
-      "estimated solution vector X: \n",
-      " tf.Tensor([ 0.08381683  0.30096936  0.0422958  -0.00399998  0.06346144 -0.00371498], shape=(6,), dtype=float32)\n",
-      "stds: \n",
-      " tf.Tensor([0.10630614 0.00106955 0.02779579 0.00437668 0.08102326 0.00592286], shape=(6,), dtype=float32)\n",
-      "estimated solution vector X: \n",
-      " tf.Tensor([ 0.07113962  0.3009315   0.04950405 -0.00343051  0.1196395  -0.00376625], shape=(6,), dtype=float32)\n",
-      "stds: \n",
-      " tf.Tensor([0.10515884 0.00107619 0.02715474 0.00432565 0.07737441 0.00594224], shape=(6,), dtype=float32)\n",
-      "estimated solution vector X: \n",
-      " tf.Tensor([ 0.07112513  0.30086517  0.06155644 -0.00327357  0.10061166 -0.00211483], shape=(6,), dtype=float32)\n",
-      "stds: \n",
-      " tf.Tensor([0.11318387 0.0011689  0.06639217 0.00434308 0.12622176 0.00622232], shape=(6,), dtype=float32)\n",
-      "\n",
-      " L2 \n",
       " tf.Tensor(\n",
-      "[[0. 0. 1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0. 0. 1.]], shape=(4, 6), dtype=float32)\n",
-      "\n",
-      " lam \n",
+      "[ 2.9021862e-01  1.5780320e-02  4.5703095e-03  1.1463766e-05\n",
+      " -5.8212602e-03  1.1957903e-02], shape=(6,), dtype=float32)\n",
+      "estimated solution vector X: \n",
+      " tf.Tensor([ 0.29367393  0.00832375  0.00971818 -0.0005553  -0.00776695  0.01230285], shape=(6,), dtype=float32)\n",
+      "estimated solution vector X: \n",
+      " tf.Tensor([ 0.29397506  0.00797868  0.01166027 -0.00081911 -0.00800717  0.01232892], shape=(6,), dtype=float32)\n",
+      "estimated solution vector X: \n",
+      " tf.Tensor([ 0.29395065  0.00795303  0.01179247 -0.00084146 -0.00800735  0.01233483], shape=(6,), dtype=float32)\n",
+      "stds: \n",
       " tf.Tensor(\n",
-      "[[5.3267868e+01 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00]\n",
-      " [0.0000000e+00 8.0493385e+01 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00]\n",
-      " [0.0000000e+00 0.0000000e+00 5.0403653e+02 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00]\n",
-      " [0.0000000e+00 0.0000000e+00 0.0000000e+00 5.7060297e+04 0.0000000e+00\n",
-      "  0.0000000e+00]\n",
-      " [0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 9.9029352e+04\n",
-      "  0.0000000e+00]\n",
-      " [0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  9.0255619e+05]], shape=(6, 6), dtype=float32)\n",
-      "\n",
-      " U2 \n",
-      " tf.Tensor(\n",
-      "[[ 2.8961521e-01  9.5006859e-01 -1.0571338e-01  1.3468671e-02\n",
-      "  -4.6184316e-02  5.4477429e-04]\n",
-      " [-2.7168330e-03  7.4827898e-04 -7.2825598e-03 -1.3448279e-02\n",
-      "   2.2894399e-02  9.9961698e-01]\n",
-      " [ 3.8001809e-01 -1.1841152e-02  9.2430389e-01  1.5646337e-02\n",
-      "   2.8445566e-02  7.3346146e-03]\n",
-      " [ 2.0710609e-03  1.1274398e-02 -3.1927742e-02  8.2814366e-01\n",
-      "   5.5948550e-01 -1.9081077e-03]\n",
-      " [ 8.7845820e-01 -3.0828425e-01 -3.6489162e-01 -1.1315593e-02\n",
-      "  -1.1138193e-03 -1.6678151e-04]\n",
-      " [ 2.9607897e-03  4.5415077e-02 -1.6390894e-02 -5.5985993e-01\n",
-      "   8.2674569e-01 -2.6612615e-02]], shape=(6, 6), dtype=float32)\n"
+      "[7.8877457e-04 9.3999226e-04 1.9912678e-03 2.8049873e-04 2.6349569e-04\n",
+      " 7.3088413e-05], shape=(6,), dtype=float32)\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08d5db8e1ecb4931bab12a5bbc1201fc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "AttributeError",
+     "evalue": "'ICET' object has no attribute 'plt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-250-9288b1f05a0c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconstant\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0.3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[0mit\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mICET\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcloud1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mc1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcloud2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mc2\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[0mfid\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m50\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdraw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mD\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx0\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m \u001b[0mViewInteractiveWidget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwindow\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'ICET' object has no attribute 'plt'"
+     ]
     }
    ],
    "source": [
@@ -148,20 +104,73 @@
     "basedir = 'C:/kitti/'\n",
     "date = '2011_09_26'\n",
     "drive = '0005'\n",
+    "idx = 10\n",
     "frame_range = range(150, 151, 1)\n",
     "dataset = pykitti.raw(basedir, date, drive)\n",
-    "velo1 = dataset.get_velo(0) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
+    "velo1 = dataset.get_velo(idx) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
     "c1 = velo1[:,:3]\n",
     "c1 = c1[c1[:,2] > -1.5] #ignore ground plane\n",
+    "velo2 = dataset.get_velo(idx+1) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
+    "c2 = velo2[:,:3]\n",
+    "c2 = c2[c2[:,2] > -1.5] #ignore ground plane\n",
     "## ------------------------------------------------------------------------------------\n",
     "\n",
     "#single distinct cluster\n",
-    "c1 = np.random.randn(3000,3)*tf.constant([0.3,0.04,0.3]) + tf.constant([0.,4.,0.])\n",
-    "c2 = np.random.randn(3000,3)*tf.constant([0.3,0.04,0.3]) + tf.constant([0.,4.,0.]) - np.array([0.1, 0.3, 0.0])\n",
+    "# c1 = np.random.randn(3000,3)*tf.constant([0.3,0.04,0.3]) + tf.constant([0.,4.,0.])\n",
+    "# c2 = np.random.randn(3000,3)*tf.constant([0.3,0.04,0.3]) + tf.constant([0.,4.,0.]) - np.array([0.1, 0.3, 0.0])\n",
     "# c2 = c1 - np.array([0.1, 0.3, 0.0])\n",
     "\n",
-    "it = ICET(cloud1 = c1, cloud2 = c2,  fid = 50, draw = True)\n",
-    "ViewInteractiveWidget(it.plt.window)\n"
+    "# D = True\n",
+    "D = False\n",
+    "X = tf.constant([0.3, 0., 0., 0., 0., 0.])\n",
+    "it = ICET(cloud1 = c1, cloud2 = c2,  fid = 50, draw = D, x0 = X)\n",
+    "ViewInteractiveWidget(it.plt.window)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.30123163 -0.02423234  0.00349136]]\n",
+      "[[ 0.31619813  0.00952271 -0.01318738 -0.00226272  0.00075722 -0.01186753]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#get true transformation between frames\n",
+    "from metpy.calc import lat_lon_grid_deltas\n",
+    "poses0 = dataset.oxts[idx] #<- ID of 1st scan\n",
+    "poses1 = dataset.oxts[idx+1] #<- ID of 2nd scan\n",
+    "lat0 = poses0.packet.lat\n",
+    "lon0 = poses0.packet.lon\n",
+    "alt0 = poses0.packet.alt\n",
+    "lat1 = poses1.packet.lat\n",
+    "lon1 = poses1.packet.lon\n",
+    "alt1 = poses1.packet.alt\n",
+    "\n",
+    "dx_oxts, dy_oxts = lat_lon_grid_deltas(np.array([lon0,lon1]), np.array([lat0, lat1]))\n",
+    "# print(dx_oxts, dy_oxts) \n",
+    "dx_oxts = dx_oxts[0,0].magnitude\n",
+    "dy_oxts = dy_oxts[0,0].magnitude\n",
+    "dz_oxts = (alt0-alt1)\n",
+    "droll_oxts = (poses0.packet.roll - poses1.packet.roll)\n",
+    "dpitch_oxts = (poses0.packet.pitch - poses1.packet.pitch)\n",
+    "dyaw_oxts = (poses0.packet.yaw - poses1.packet.yaw)\n",
+    "\n",
+    "rot = poses1.T_w_imu[:3,:3] #trying this\n",
+    "\n",
+    "dxyz_oxts = np.array([[dx_oxts, dy_oxts, dz_oxts]])\n",
+    "dxyz_lidar = dxyz_oxts.dot(rot)\n",
+    "print(dxyz_lidar)\n",
+    "\n",
+    "dt = 0.10\n",
+    "from_vel = np.array([[poses1.packet.vf*dt, poses1.packet.vl*dt, poses1.packet.vu*dt, -poses1.packet.wf*dt, -poses1.packet.wl*dt, -poses1.packet.wu*dt]])\n",
+    "print(from_vel)\n"
    ]
   },
   {
