made improvemnts to shadowing test scene, starting work on stretching cells closest to ground plane

--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -57,70 +57,9 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([0. 0. 0. 0. 0. 0.], shape=(6,), dtype=float32)\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor(\n",
-      "[-6.9002965e-07 -1.8390633e-08 -2.6393589e-04  9.1505262e-06\n",
-      "  2.9715011e-06 -1.4560432e-06], shape=(6,), dtype=float32)\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor(\n",
-      "[-6.7255002e-07 -1.4113390e-08 -2.5709847e-04  8.3699551e-06\n",
-      "  2.1535159e-06 -1.4658602e-06], shape=(6,), dtype=float32)\n",
-      "pred_stds: \n",
-      " tf.Tensor(\n",
-      "[9.2369952e-08 1.1381829e-06 3.6306319e-05 3.5609767e-06 1.9277884e-06\n",
-      " 1.4273273e-05], shape=(6,), dtype=float32)\n",
-      "\n",
-      " L2 \n",
-      " tf.Tensor(\n",
-      "[[0. 1. 0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0. 0. 1.]], shape=(5, 6), dtype=float32)\n",
-      "\n",
-      " lam \n",
-      " tf.Tensor(\n",
-      "[[7.7484492e+04 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00]\n",
-      " [0.0000000e+00 1.1275791e+06 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00]\n",
-      " [0.0000000e+00 0.0000000e+00 7.5680646e+08 0.0000000e+00 0.0000000e+00\n",
-      "  0.0000000e+00]\n",
-      " [0.0000000e+00 0.0000000e+00 0.0000000e+00 4.8789253e+09 0.0000000e+00\n",
-      "  0.0000000e+00]\n",
-      " [0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 8.3599639e+10\n",
-      "  0.0000000e+00]\n",
-      " [0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
-      "  7.6634377e+11]], shape=(6, 6), dtype=float32)\n",
-      "\n",
-      " U2 \n",
-      " tf.Tensor(\n",
-      "[[ 8.9597352e-02 -9.9597323e-01 -2.5432066e-03  2.1485246e-05\n",
-      "  -8.8198685e-06  6.2810264e-05]\n",
-      " [-9.9282932e-01 -8.9330636e-02 -1.2478464e-03 -7.9438016e-02\n",
-      "  -1.1376571e-03 -1.7237384e-05]\n",
-      " [ 2.7672554e-04  2.5777477e-03 -9.9877393e-01  9.8865600e-03\n",
-      "  -4.0685780e-02  2.6283434e-02]\n",
-      " [-2.7730514e-06 -9.1129506e-05  3.2652859e-02  1.3506650e-02\n",
-      "  -9.6534514e-01 -2.5857314e-01]\n",
-      " [ 1.6386260e-06 -2.8360484e-05  3.5925373e-02  2.9269143e-03\n",
-      "  -2.5739434e-01  9.6563399e-01]\n",
-      " [-7.9134524e-02 -7.1225232e-03  9.2595778e-03  9.9669504e-01\n",
-      "   1.4150567e-02  4.0626581e-04]], shape=(6, 6), dtype=float32)\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "569beb1bdd7e43ba878319b0727b473a",
+       "model_id": "4cd057cc5dc14562ad91599fc2cdb82f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -150,26 +89,44 @@
     "# c2 = c2[c2[:,2] > -1.5] #ignore ground plane\n",
     "## ------------------------------------------------------------------------------------\n",
     "\n",
-    "## load custom point cloud geneated in matlab------------------------------------------\n",
-    "c1 = np.loadtxt(\"scene1_scan1.txt\", dtype = float)\n",
-    "# c2 = c1 + np.array([2.0, 0.2, 0])\n",
-    "c2 = c1 + np.array([0.1, 0., 0.])\n",
+    "# ## load custom point cloud geneated in matlab------------------------------------------\n",
+    "# c1 = np.loadtxt(\"scene1_scan1.txt\", dtype = float)\n",
+    "# # c2 = c1 + np.array([2.0, 0.2, 0])\n",
+    "# c2 = c1 + np.array([0.1, 0., 0.])\n",
     "\n",
-    "# c1 = c1[c1[:,2] > -1.5] #ignore ground plane\n",
-    "# c2 = c2[c2[:,2] > -1.5] #ignore ground plane\n",
-    "## ------------------------------------------------------------------------------------\n",
+    "# # c1 = c1[c1[:,2] > -1.5] #ignore ground plane\n",
+    "# # c2 = c2[c2[:,2] > -1.5] #ignore ground plane\n",
+    "# ## ------------------------------------------------------------------------------------\n",
     "\n",
     "#single distinct cluster---------------------------------------------------------------\n",
-    "# c1 = np.random.randn(3000,3)*tf.constant([0.3,0.04,0.3]) + tf.constant([0.,4.,0.])\n",
-    "# c2 = np.random.randn(3000,3)*tf.constant([0.3,0.04,0.3]) + tf.constant([0.,4.,0.]) - np.array([0.1, 0.3, 0.0])\n",
+    "c1 = np.random.randn(3000,3)*tf.constant([0.3,0.04,0.3]) + tf.constant([0.,4.,0.])\n",
+    "c2 = np.random.randn(3000,3)*tf.constant([0.3,0.04,0.3]) + tf.constant([0.,4.,0.]) - np.array([0.1, 0.1, 0.0])\n",
     "# c2 = c1 - np.array([0.1, 0.3, 0.0])\n",
     "# -------------------------------------------------------------------------------------\n",
     "\n",
     "D = True\n",
     "# D = False\n",
     "X = tf.constant([0., 0., 0., 0., 0., 0.])\n",
-    "it = ICET(cloud1 = c1, cloud2 = c2,  fid = 50, draw = D, x0 = X, niter = 3)\n",
+    "it = ICET(cloud1 = c1, cloud2 = c2,  fid = 30, draw = D, x0 = X, niter = 3)\n",
     "ViewInteractiveWidget(it.plt.window)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test- workaround for in place tensor operations\n",
+    "indices = tf.cast(tf.constant([1, 2, 3, 5]), tf.int32)[:,None]\n",
+    "print(\"indices\", indices)\n",
+    "updates = tf.ones(tf.shape(indices))\n",
+    "print(\"updates\", updates)\n",
+    "shape = tf.constant([7, 1])\n",
+    "print(\"shape\", shape)\n",
+    "\n",
+    "b = tf.scatter_nd(indices, updates, shape)\n",
+    "print(b)\n"
    ]
   },
   {
@@ -337,17 +294,6 @@
     "dt = 0.10\n",
     "from_vel = np.array([[poses1.packet.vf*dt, poses1.packet.vl*dt, poses1.packet.vu*dt, -poses1.packet.wf*dt, -poses1.packet.wl*dt, -poses1.packet.wu*dt]])\n",
     "print(from_vel)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(it.X)\n",
-    "print(it.pred_stds)\n",
-    "print(it.Q)"
    ]
   },
   {
