working on setting up cells in tophat shape

--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -51,15 +51,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([0. 0. 0. 0. 0. 0.], shape=(6,), dtype=float32)\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.07079101  0.09646648  0.1589675  -0.01303121  0.10367942  0.00351952], shape=(6,), dtype=float32)\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.13192143  0.09300122  0.5299501  -0.0243421   0.26447928  0.00762435], shape=(6,), dtype=float32)\n",
+      "pred_stds: \n",
+      " tf.Tensor([0.10705623 0.00271107 0.02279759 0.00825356 0.01803817 0.00673685], shape=(6,), dtype=float32)\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4cd057cc5dc14562ad91599fc2cdb82f",
+       "model_id": "971203d02e7e42129c34bf2a1c77d967",
        "version_major": 2,
        "version_minor": 0
       },
@@ -107,15 +124,42 @@
     "D = True\n",
     "# D = False\n",
     "X = tf.constant([0., 0., 0., 0., 0., 0.])\n",
-    "it = ICET(cloud1 = c1, cloud2 = c2,  fid = 30, draw = D, x0 = X, niter = 3)\n",
+    "it = ICET(cloud1 = c1, cloud2 = c2,  fid = 50, draw = D, x0 = X, niter = 3)\n",
+    "# print(it.grid[(it.fid_theta*(it.fid_phi)):(it.fid_theta*(it.fid_phi))+20])\n",
     "ViewInteractiveWidget(it.plt.window)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "indices tf.Tensor(\n",
+      "[[1]\n",
+      " [2]\n",
+      " [3]\n",
+      " [5]], shape=(4, 1), dtype=int32)\n",
+      "updates tf.Tensor(\n",
+      "[[1.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [1.]], shape=(4, 1), dtype=float32)\n",
+      "shape tf.Tensor([7 1], shape=(2,), dtype=int32)\n",
+      "tf.Tensor(\n",
+      "[[0.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [0.]\n",
+      " [1.]\n",
+      " [0.]], shape=(7, 1), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
     "#test- workaround for in place tensor operations\n",
     "indices = tf.cast(tf.constant([1, 2, 3, 5]), tf.int32)[:,None]\n",
