got UKF type extended axis threshold working

--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 83,
    "metadata": {
     "scrolled": false
    },
@@ -60,90 +60,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rotated_actual tf.Tensor(\n",
-      "[[[2.0174045e-04 1.3947507e-02 4.2181495e-01]\n",
-      "  [8.0603175e-02 5.0892186e-04 1.0319130e-03]\n",
-      "  [1.1170174e-04 3.4202400e-01 1.7202862e-02]]\n",
-      "\n",
-      " [[3.6506500e-04 2.4612048e-03 4.3466190e-01]\n",
-      "  [7.9860240e-02 1.2378838e-03 1.9990564e-03]\n",
-      "  [3.0036815e-04 3.3210999e-01 3.2137462e-03]]\n",
-      "\n",
-      " [[8.0881023e-04 2.1140876e-01 3.3740995e-03]\n",
-      "  [8.3196476e-02 2.0214971e-03 5.8399332e-03]\n",
-      "  [1.3678311e-03 2.0529411e-03 3.5321036e-01]]\n",
-      "\n",
-      " [[1.0744650e-03 2.4048081e-01 7.1287178e-02]\n",
-      "  [7.6105565e-02 1.5510834e-03 1.1614243e-02]\n",
-      "  [2.5694519e-03 5.4619480e-02 3.1419602e-01]]\n",
-      "\n",
-      " [[6.6518743e-04 2.5380361e-01 7.9159237e-02]\n",
-      "  [8.0462180e-02 2.4593642e-03 1.5061606e-03]\n",
-      "  [5.0149392e-04 5.7945296e-02 3.4665790e-01]]\n",
-      "\n",
-      " [[4.8256423e-03 2.5297490e-01 1.1797309e-03]\n",
-      "  [7.8378342e-02 1.5586235e-02 6.6340133e-03]\n",
-      "  [1.5193865e-03 5.6376460e-04 3.4596559e-01]]], shape=(6, 3, 3), dtype=float32)\n",
-      "mu_repeated tf.Tensor(\n",
-      "[[[-0.00774829  4.0012136   0.23830746]\n",
-      "  [-0.00774829  4.0012136   0.23830746]\n",
-      "  [-0.00774829  4.0012136   0.23830746]]\n",
-      "\n",
-      " [[ 0.00403758  4.0000887  -0.23630483]\n",
-      "  [ 0.00403758  4.0000887  -0.23630483]\n",
-      "  [ 0.00403758  4.0000887  -0.23630483]]\n",
-      "\n",
-      " [[-0.5442682   4.0009775  -0.26093516]\n",
-      "  [-0.5442682   4.0009775  -0.26093516]\n",
-      "  [-0.5442682   4.0009775  -0.26093516]]\n",
-      "\n",
-      " [[ 0.5578674   3.9939873  -0.23020853]\n",
-      "  [ 0.5578674   3.9939873  -0.23020853]\n",
-      "  [ 0.5578674   3.9939873  -0.23020853]]\n",
-      "\n",
-      " [[ 0.5573946   3.9969835   0.19393025]\n",
-      "  [ 0.5573946   3.9969835   0.19393025]\n",
-      "  [ 0.5573946   3.9969835   0.19393025]]\n",
-      "\n",
-      " [[-0.5631391   4.000291    0.26896656]\n",
-      "  [-0.5631391   4.000291    0.26896656]\n",
-      "  [-0.5631391   4.000291    0.26896656]]], shape=(6, 3, 3), dtype=float32)\n",
-      "tf.Tensor(\n",
-      "[[-7.5465473e-03  4.0151610e+00  6.6012239e-01]\n",
-      " [ 7.2854884e-02  4.0017223e+00  2.3933938e-01]\n",
-      " [-7.6365857e-03  4.3432374e+00  2.5551033e-01]\n",
-      " [ 4.4026403e-03  4.0025501e+00  1.9835706e-01]\n",
-      " [ 8.3897814e-02  4.0013266e+00 -2.3430578e-01]\n",
-      " [ 4.3379436e-03  4.3321986e+00 -2.3309109e-01]\n",
-      " [-5.4345936e-01  4.2123861e+00 -2.5756106e-01]\n",
-      " [-4.6107173e-01  4.0029988e+00 -2.5509521e-01]\n",
-      " [-5.4290038e-01  4.0030303e+00  9.2275202e-02]\n",
-      " [ 5.5894190e-01  4.2344680e+00 -1.5892136e-01]\n",
-      " [ 6.3397300e-01  3.9955385e+00 -2.1859428e-01]\n",
-      " [ 5.6043684e-01  4.0486069e+00  8.3987489e-02]\n",
-      " [ 5.5805981e-01  4.2507873e+00  2.7308950e-01]\n",
-      " [ 6.3785678e-01  3.9994428e+00  1.9543642e-01]\n",
-      " [ 5.5789614e-01  4.0549288e+00  5.4058814e-01]\n",
-      " [-5.5831343e-01  4.2532659e+00  2.7014628e-01]\n",
-      " [-4.8476073e-01  4.0158772e+00  2.7560058e-01]\n",
-      " [-5.6161970e-01  4.0008545e+00  6.1493218e-01]], shape=(18, 3), dtype=float32)\n",
+      "unambiguous indices tf.Tensor(\n",
+      "[[0]\n",
+      " [3]\n",
+      " [6]\n",
+      " [9]], shape=(4, 1), dtype=int32)\n",
       "\n",
       " estimated solution vector X: \n",
       " tf.Tensor([0. 0. 0. 0. 0. 0.], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([-0.18009472  0.25031415 -0.29954642 -0.00928657  0.2836524   0.00339405], shape=(6,), dtype=float32)\n",
+      " tf.Tensor(\n",
+      "[-1.80005538e-03  1.13779615e-05 -7.33071356e-05 -5.19596069e-05\n",
+      " -4.86510806e-03  3.36547103e-03], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([-0.20536809  0.25289017 -0.2893761  -0.0080842   0.290017   -0.00192918], shape=(6,), dtype=float32)\n",
+      " tf.Tensor(\n",
+      "[-1.4392096e-03  1.1793925e-05 -4.3687913e-05 -4.8461661e-05\n",
+      " -5.9660100e-03  2.5850558e-03], shape=(6,), dtype=float32)\n",
       "pred_stds: \n",
-      " tf.Tensor([0.05965879 0.00207406 0.02424779 0.00616812 0.01602844 0.00826492], shape=(6,), dtype=float32)\n"
+      " tf.Tensor(\n",
+      "[1.8448322e-03 8.3213827e-06 1.8540579e-04 6.3419575e-05 5.4623419e-03\n",
+      " 6.2929536e-03], shape=(6,), dtype=float32)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1ecbc13ab4647d9a751bd7257b10562",
+       "model_id": "2982853583a04cab98b2b04668f9c069",
        "version_major": 2,
        "version_minor": 0
       },
@@ -183,8 +127,8 @@
     "# ## ------------------------------------------------------------------------------------\n",
     "\n",
     "#single distinct cluster---------------------------------------------------------------\n",
-    "c1 = np.random.randn(3000,3)*tf.constant([0.3,0.04,0.3]) + tf.constant([0.,4.,0.])\n",
-    "c2 = np.random.randn(3000,3)*tf.constant([0.3,0.04,0.3]) + tf.constant([0.,4.,0.]) - np.array([0., 0.25, 0.0])\n",
+    "c1 = np.random.randn(3000,3)*tf.constant([0.04,0.3,0.3]) + tf.constant([4.,0.,0.])\n",
+    "c2 = np.random.randn(3000,3)*tf.constant([0.04,0.3,0.3]) + tf.constant([4.,0.,0.]) - np.array([0., 0.25, 0.0])\n",
     "# c2 = c1 - np.array([0.1, 0.3, 0.0])\n",
     "# -------------------------------------------------------------------------------------\n",
     "\n",
@@ -198,7 +142,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[ 0.5403023   0.84147096  0.        ]\n",
+      " [-0.84147096  0.5403023   0.        ]\n",
+      " [ 0.         -0.          1.        ]], shape=(3, 3), dtype=float32) \n",
+      "\n",
+      "<tf.Variable 'Variable:0' shape=(2, 3) dtype=float32, numpy=\n",
+      "array([[0., 0., 1.],\n",
+      "       [0., 0., 1.]], dtype=float32)>\n",
+      "tf.Tensor(\n",
+      "[[[ 0.5403023   0.84147096  0.        ]\n",
+      "  [-0.84147096  0.5403023   0.        ]\n",
+      "  [ 0.         -0.          1.        ]]\n",
+      "\n",
+      " [[ 0.5403023   0.84147096  0.        ]\n",
+      "  [-0.84147096  0.5403023   0.        ]\n",
+      "  [ 0.         -0.          1.        ]]], shape=(2, 3, 3), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#test batch rotation matrix conversions\n",
+    "from utils import R_tf\n",
+    "\n",
+    "print(R_tf(tf.Variable([[0., 0., 1.]])), \"\\n\")\n",
+    "\n",
+    "angs = tf.Variable([[0., 0., 1.], [0., 0., 1.]])\n",
+    "# angs = tf.Variable([[0., 0., 1.]])\n",
+    "print(angs)\n",
+    "\n",
+    "rots = R_tf(angs)\n",
+    "print(rots)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -431,49 +417,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(\n",
-      "[[0.]\n",
-      " [1.]\n",
-      " [2.]\n",
-      " [3.]\n",
-      " [4.]\n",
-      " [5.]], shape=(6, 1), dtype=float64)\n",
-      "tf.Tensor(\n",
-      "[[0.]\n",
-      " [0.]\n",
-      " [0.]\n",
-      " [1.]\n",
-      " [1.]\n",
-      " [1.]\n",
-      " [2.]\n",
-      " [2.]\n",
-      " [2.]\n",
-      " [3.]\n",
-      " [3.]\n",
-      " [3.]\n",
-      " [4.]\n",
-      " [4.]\n",
-      " [4.]\n",
-      " [5.]\n",
-      " [5.]\n",
-      " [5.]], shape=(18, 1), dtype=float64)\n",
-      "tf.Tensor(\n",
-      "[[0. 0. 0.]\n",
-      " [1. 1. 1.]\n",
-      " [2. 2. 2.]\n",
-      " [3. 3. 3.]\n",
-      " [4. 4. 4.]\n",
-      " [5. 5. 5.]], shape=(6, 3), dtype=float64)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#duplicate each element of an n*1 vector 3 times\n",
     "t = tf.linspace(0,5,6)[:,None]\n",
@@ -489,34 +435,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(\n",
-      "[[ 1.  2.  3.]\n",
-      " [ 2.  4.  6.]\n",
-      " [ 3.  6.  9.]\n",
-      " [ 4.  8. 12.]], shape=(4, 3), dtype=float64)\n",
-      "tf.Tensor(\n",
-      "[[ 1.  2.  3.]\n",
-      " [ 1.  2.  3.]\n",
-      " [ 1.  2.  3.]\n",
-      " [ 2.  4.  6.]\n",
-      " [ 2.  4.  6.]\n",
-      " [ 2.  4.  6.]\n",
-      " [ 3.  6.  9.]\n",
-      " [ 3.  6.  9.]\n",
-      " [ 3.  6.  9.]\n",
-      " [ 4.  8. 12.]\n",
-      " [ 4.  8. 12.]\n",
-      " [ 4.  8. 12.]], shape=(12, 3), dtype=float64)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#duplicate each element of an n*3 vector 3 times\n",
     "t = tf.linspace(1,4,4)\n",
