ran MC comparing two methods of extended axis identification on artificial shadow dataset. Pred stds match closer for new case, however, without the ground plane there is a constant error in the pitch

--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -60,34 +60,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "unambiguous indices tf.Tensor(\n",
-      "[[0]\n",
-      " [3]\n",
-      " [6]\n",
-      " [9]], shape=(4, 1), dtype=int32)\n",
       "\n",
       " estimated solution vector X: \n",
       " tf.Tensor([0. 0. 0. 0. 0. 0.], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor(\n",
-      "[-1.80005538e-03  1.13779615e-05 -7.33071356e-05 -5.19596069e-05\n",
-      " -4.86510806e-03  3.36547103e-03], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([-0.00057257 -0.02993681  0.01096994 -0.00624653  0.0024396   0.00143378], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor(\n",
-      "[-1.4392096e-03  1.1793925e-05 -4.3687913e-05 -4.8461661e-05\n",
-      " -5.9660100e-03  2.5850558e-03], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([-0.00020759 -0.03655129  0.01341593 -0.00756394  0.0025393  -0.00040412], shape=(6,), dtype=float32)\n",
       "pred_stds: \n",
-      " tf.Tensor(\n",
-      "[1.8448322e-03 8.3213827e-06 1.8540579e-04 6.3419575e-05 5.4623419e-03\n",
-      " 6.2929536e-03], shape=(6,), dtype=float32)\n"
+      " tf.Tensor([0.00152041 0.13499252 0.04934802 0.02694187 0.00495535 0.00496411], shape=(6,), dtype=float32)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2982853583a04cab98b2b04668f9c069",
+       "model_id": "e499be9c8a7646d589b3364fcd8bc432",
        "version_major": 2,
        "version_minor": 0
       },
@@ -142,32 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(\n",
-      "[[ 0.5403023   0.84147096  0.        ]\n",
-      " [-0.84147096  0.5403023   0.        ]\n",
-      " [ 0.         -0.          1.        ]], shape=(3, 3), dtype=float32) \n",
-      "\n",
-      "<tf.Variable 'Variable:0' shape=(2, 3) dtype=float32, numpy=\n",
-      "array([[0., 0., 1.],\n",
-      "       [0., 0., 1.]], dtype=float32)>\n",
-      "tf.Tensor(\n",
-      "[[[ 0.5403023   0.84147096  0.        ]\n",
-      "  [-0.84147096  0.5403023   0.        ]\n",
-      "  [ 0.         -0.          1.        ]]\n",
-      "\n",
-      " [[ 0.5403023   0.84147096  0.        ]\n",
-      "  [-0.84147096  0.5403023   0.        ]\n",
-      "  [ 0.         -0.          1.        ]]], shape=(2, 3, 3), dtype=float32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#test batch rotation matrix conversions\n",
     "from utils import R_tf\n",
@@ -184,35 +150,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "indices tf.Tensor(\n",
-      "[[1]\n",
-      " [2]\n",
-      " [3]\n",
-      " [5]], shape=(4, 1), dtype=int32)\n",
-      "updates tf.Tensor(\n",
-      "[[1.]\n",
-      " [1.]\n",
-      " [1.]\n",
-      " [1.]], shape=(4, 1), dtype=float32)\n",
-      "shape tf.Tensor([7 1], shape=(2,), dtype=int32)\n",
-      "tf.Tensor(\n",
-      "[[0.]\n",
-      " [1.]\n",
-      " [1.]\n",
-      " [1.]\n",
-      " [0.]\n",
-      " [1.]\n",
-      " [0.]], shape=(7, 1), dtype=float32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#test- workaround for in place tensor operations\n",
     "indices = tf.cast(tf.constant([1, 2, 3, 5]), tf.int32)[:,None]\n",
@@ -242,10 +182,10 @@
     "import matplotlib.pyplot as plt\n",
     "font = {'fontname':'Times New Roman'}\n",
     "\n",
-    "OXTS_baseline = np.loadtxt(\"OXTS_baseline.txt\")\n",
-    "ICET_estimates = np.loadtxt(\"ICET_estimates.txt\")\n",
+    "OXTS_baseline = np.loadtxt(\"OXTS_baseline_v2.txt\")\n",
+    "ICET_estimates = np.loadtxt(\"ICET_estimates_v2.txt\")\n",
     "\n",
-    "OXTS_baseline[:,3:] = OXTS_baseline[:,3:]/0.1*0.1037\n",
+    "# OXTS_baseline[:,3:] = OXTS_baseline[:,3:]/0.1*0.1037\n",
     "\n",
     "#fix sign errors\n",
     "ICET_estimates[:,1] = -ICET_estimates[:,1]\n",
@@ -312,7 +252,7 @@
     "plt.rc('font',family='Times New Roman')\n",
     "fig3, ax3 = plt.subplots(1,1)\n",
     "\n",
-    "ICET_pred_stds = np.loadtxt(\"ICET_pred_stds.txt\")\n",
+    "ICET_pred_stds = np.loadtxt(\"ICET_pred_stds_v2.txt\")\n",
     "\n",
     "#which component to look at\n",
     "# c = 5 #yaw\n",
