--- a/v3/perspective_shift/Perspective Shift Identification.ipynb
+++ b/v3/perspective_shift/Perspective Shift Identification.ipynb
@@ -80,9 +80,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(180000)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autosaving every 180 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "#setup - rememeber to switch to dnn kernel...\n",
     "import numpy as np\n",
@@ -112,11 +129,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([152000     50      3], shape=(3,), dtype=int32)\n"
+     ]
+    }
+   ],
    "source": [
     "#import training data\n",
     "#toy data set\n",
@@ -287,16 +312,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#save network\n",
     "# model.save(\"ffnet10k25.kmod\")\n",
-    "model.save(\"Net.kmod\")\n",
+    "# model.save(\"Net.kmod\")\n",
     "\n",
     "#load network\n",
-    "# model = tf.keras.models.load_model(\"ffnet10k25.kmod\")"
+    "model = tf.keras.models.load_model(\"Net.kmod\")"
    ]
   },
   {
