--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -9,26 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "IPython.notebook.set_autosave_interval(180000)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Autosaving every 180 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from vedo import *\n",
     "import os\n",
@@ -51,25 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.3.0\n",
-      "WARNING:tensorflow:AutoGraph could not transform <function Model.make_predict_function.<locals>.predict_function at 0x00000169ECD97A68> and will run it as-is.\n",
-      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
-      "Cause: unsupported operand type(s) for -: 'NoneType' and 'int'\n",
-      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
-      "WARNING: AutoGraph could not transform <function Model.make_predict_function.<locals>.predict_function at 0x00000169ECD97A68> and will run it as-is.\n",
-      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
-      "Cause: unsupported operand type(s) for -: 'NoneType' and 'int'\n",
-      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(tf.__version__)\n",
     "\n",
@@ -113,17 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.57577723  2.827782   -0.15463053]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#test \n",
     "print(correction)"
@@ -131,66 +90,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([0. 0. 0. 0. 0. 0.], shape=(6,), dtype=float32)\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([ 0.3141062  -0.00153641  0.0999162  -0.00620506  0.00421196  0.0124417 ], shape=(6,), dtype=float32)\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([ 0.33431688  0.00695794  0.05746838 -0.00567837  0.00349602  0.0138565 ], shape=(6,), dtype=float32)\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34085903 -0.006345    0.02839625 -0.00417242  0.00296416  0.01407219], shape=(6,), dtype=float32)\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34080544 -0.00744381  0.00955591 -0.00288694  0.00245066  0.01413589], shape=(6,), dtype=float32)\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34119523 -0.00805547  0.00306251 -0.00260944  0.00223534  0.01418975], shape=(6,), dtype=float32)\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([ 0.3427945  -0.01127413  0.00202624 -0.0026931   0.00242351  0.01419097], shape=(6,), dtype=float32)\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([ 0.3434889  -0.01408412 -0.00178431 -0.00258776  0.00253041  0.01416836], shape=(6,), dtype=float32)\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34444398 -0.01737518 -0.00738807 -0.00241182  0.0027529   0.01412306], shape=(6,), dtype=float32)\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34437746 -0.01725859 -0.01102666 -0.00249217  0.0034684   0.01408966], shape=(6,), dtype=float32)\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34454846 -0.01723492 -0.01242142 -0.00250986  0.00391275  0.01406733], shape=(6,), dtype=float32)\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([ 0.344713   -0.01745878 -0.01287344 -0.00251828  0.00404137  0.01406615], shape=(6,), dtype=float32)\n",
-      "\n",
-      " ---identified moving objects---\n",
-      "pred_stds: \n",
-      " tf.Tensor([0.0017595  0.00221952 0.00762909 0.00095035 0.00054095 0.00012837], shape=(6,), dtype=float32)\n",
-      " L2: \n",
-      " tf.Tensor(\n",
-      "[[1. 0. 0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0. 0. 1.]], shape=(6, 6), dtype=float32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ICET_spherical import ICET\n",
     "\n",
@@ -228,7 +132,7 @@
     "# D = True\n",
     "D = False\n",
     "X = tf.constant([0., 0., 0., 0., 0., 0.])\n",
-    "it1 = ICET(cloud1 = c1, cloud2 = c2,  fid = 50, draw = False, x0 = X, niter = 12, group= 2, RM = True)\n",
+    "it1 = ICET(cloud1 = c1, cloud2 = c2,  fid = 90, draw = False, x0 = X, niter = 12, group= 2, RM = True)\n",
     "# it2 = ICET(cloud1 = it1.cloud1_static, cloud2 = c2, fid = 50, niter = 20, draw = True, group = 2, RM = False)\n",
     "\n",
     "if D:\n",
@@ -237,18 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(68, 3)\n",
-      "tf.Tensor([ 0.38330257  0.16168046 -0.01445991], shape=(3,), dtype=float32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Pre-process points from ICET to feed to DNN\n",
     "\n",
@@ -259,12 +154,16 @@
     "npts2 = it1.npts2\n",
     "corr = it1.corr #indices of bins that have enough points from scan1 and scan2\n",
     "\n",
+    "# print(tf.shape(in2.to_tensor()))\n",
+    "\n",
     "#get indices of rag with >= 25 elements\n",
     "ncells = tf.shape(corr)[0].numpy() #num of voxels with sufficent number of points\n",
     "# print(tf.gather(npts2, corr))\n",
     "enough1 = tf.gather(in1, corr)\n",
     "enough2 = tf.gather(in2, corr)\n",
-    "# print(enough2[0])\n",
+    "print(tf.shape(enough2.to_tensor())[0].numpy())\n",
+    "# print(npts2)\n",
+    "# print(corr)\n",
     "\n",
     "#init array to store indices\n",
     "idx1 = np.zeros([ncells ,25])\n",
@@ -281,6 +180,7 @@
     "# print(it1.cloud1_tensor)\n",
     "from1 = tf.gather(it1.cloud1_tensor, idx1)\n",
     "from2 = tf.gather(it1.cloud2_tensor_OG, idx2)\n",
+    "print(from1)\n",
     "\n",
     "# x_test = tf.concat((from1, from2), axis = 1)\n",
     "np.savetxt('perspective_shift/ICET_KITTI_frame0.txt', tf.reshape(from1, [-1, 3]).numpy())\n",
@@ -288,43 +188,17 @@
     "\n",
     "from_DNN = model.predict(x_test)\n",
     "# print(from_DNN*0.1)\n",
-    "print(np.shape(from_DNN))\n",
-    "print(tf.math.reduce_mean(from_DNN, axis = 0)*0.1)\n"
+    "# print(np.shape(from_DNN))\n",
+    "# print(tf.math.reduce_mean(from_DNN, axis = 0)*0.1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'ICET' object has no attribute 'bad_idx'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-669c366950dc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;31m# print(np.std(it1.res))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mit1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbad_idx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mit1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbad_idx_rot\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msets\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munion\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mit1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbad_idx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mit1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbad_idx_rot\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'ICET' object has no attribute 'bad_idx'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#test compaing rotation angles from each cell as test for outliers\n",
-    "\n",
-    "# print(it1.res)\n",
-    "\n",
-    "# print(it1.angs1[:10])\n",
-    "# print(it1.angs2[:10])\n",
-    "# fig, ax = plt.subplots()\n",
-    "# ax.plot(it1.res)\n",
-    "\n",
-    "# print(np.mean(it1.res))\n",
-    "# print(np.std(it1.res))\n",
-    "\n",
-    "print(it1.bad_idx)\n",
-    "print(it1.bad_idx_rot)\n",
-    "tf.sets.union(it1.bad_idx[None, :], it1.bad_idx_rot[None, :]).values "
+    "#test tile"
    ]
   },
   {
@@ -500,25 +374,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'metpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-125-d62c9388fc0a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#get true transformation between frames\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mmetpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcalc\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mlat_lon_grid_deltas\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0midx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m138\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mposes0\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdataset\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moxts\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0midx\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#<- ID of 1st scan\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mposes1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdataset\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moxts\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0midx\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#<- ID of 2nd scan\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'metpy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#get true transformation between frames\n",
     "from metpy.calc import lat_lon_grid_deltas\n",
-    "idx = 138\n",
+    "idx = 0\n",
     "poses0 = dataset.oxts[idx] #<- ID of 1st scan\n",
     "poses1 = dataset.oxts[idx+1] #<- ID of 2nd scan\n",
     "lat0 = poses0.packet.lat\n",
@@ -565,6 +427,17 @@
     "\n",
     "# fig, ax = plt.subplots()\n",
     "# ax.plot(tvec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = np.array([[1,2,3,4]])\n",
+    "test = np.append(test,np.array([[0,2,3,4]]),axis = 0)\n",
+    "print(test)"
    ]
   },
   {
@@ -820,14 +693,14 @@
    "outputs": [],
    "source": [
     "#duplicate each element of an n*3 vector 3 times\n",
-    "t = tf.linspace(1,4,4)\n",
+    "t = tf.linspace(1,5,5)\n",
     "t = tf.transpose(tf.Variable([t, 2*t, 3*t]))\n",
     "print(t)\n",
     "\n",
-    "test  = tf.tile(t, [3,1])\n",
+    "test  = tf.tile(t, [4,1])\n",
     "# print(test)\n",
     "\n",
-    "test = tf.reshape(tf.transpose(test), [3, 3, -1])\n",
+    "test = tf.reshape(tf.transpose(test), [3, 4, -1])\n",
     "# print(test)\n",
     "\n",
     "test = tf.transpose(test, [2,1,0])\n",
